# openairinterface5g

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE.md  cu-ho.conf  du-ho-tdd-nepes.conf  du-ho-tdd-ofqot.conf  flexricRemote_63_68.conf  neighbour-config-tdd.conf  sanitizer.sh
ci-scripts/: Jenkinsfile-GitLab-Container  ci_infra.yaml  cls_cluster.py  cls_containerize.py  cls_module.py  cls_oaicitest.py  cls_static_code_analysis.py  datalog_rt_stats.60.2x2.yaml  epc.py  main.py  xml_class_list.yml
cmake_targets/: build_oai
common/: CMakeLists.txt  oai_version.h.in
doc/: Aerial_FAPI_Split_Tutorial.md  BUILD.md  Doxyfile  FEATURE_SET.md  L1SIM.md  ORAN_FHI7.2_Tutorial.md  RUNMODEM.md  RUN_NR_PRS.md  SystemX-tutorial-design.md  TESTBenches.md  UnitTests.md  handover-tutorial.md  iqrecordplayer_usage.md
docker/: Dockerfile.base.gNB.ubuntu22.ics  Dockerfile.base.rhel9  Dockerfile.base.rocky  Dockerfile.base.ubuntu22  Dockerfile.base.ubuntu22.cross-arm64  Dockerfile.build.fhi72.rhel9  Dockerfile.build.fhi72.ubuntu22  Dockerfile.build.rhel9  Dockerfile.build.rocky  Dockerfile.build.ubuntu22  Dockerfile.build.ubuntu22.cross-arm64  Dockerfile.eNB.rhel9  Dockerfile.eNB.rocky  Dockerfile.eNB.ubuntu22  Dockerfile.gNB.aerial.ubuntu22  Dockerfile.gNB.aw2s.rhel9  (+21 more)
openair1/PHY/NR_TRANSPORT/tests/: CMakeLists.txt  test_llr.cpp
openair1/PHY/TOOLS/tests/: CMakeLists.txt  benchmark_rotate_vector.cpp  test_signal_energy.cpp
openair1/PHY/nr_phy_common/: CMakeLists.txt
openair1/PHY/nr_phy_common/inc/: nr_ue_phy_meas.h
openair1/PHY/nr_phy_common/src/: nr_ue_phy_meas.c
(+605 files in other folders)
